--- a/Fruit Tracker Project 1/index.html
+++ b/Fruit Tracker Project 1/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="./fruitTracker.js" defer></script>
     <meta name="description" content="A fruit tracker to help you track the amount of fruit you pick in the wild.">
+    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
